gccida/c3/register_operand
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/register_operand/src/recog.c:1504:32: error: must use 'enum' tag to refer to type 'machine_mode'
int  register_operand( rtx op, machine_mode mode) 
                               ^
                               enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/register_operand/src/recog.c:1525:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[v3] == MODE_FLOAT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/register_operand/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/register_operand/src/obj/recog.o] Error 1
